Made so that when you click on the title you go to /home and made /home <main> text more pleasing to look at 	modified:   _css/style.css 	modified:   _templates/header.html 	modified:   home/index.php

--- a/_css/style.css
+++ b/_css/style.css
@@ -121,3 +121,8 @@ input[type="text"], input[type="tel"], input[type="email"]{
     justify-content: center;
     align-items: center;
 }
+
+.no_deco, .no_deco:hover{
+    text-decoration: none;
+    color: var(--p-black-01);
+}
