--- a/_css/style.css
+++ b/_css/style.css
@@ -1,18 +1,18 @@
-:root{
-    --p-01 : hsl(198, 90%, 19%);
-    --p-02 : hsl(190, 76%, 40%);
-    --p-03 : hsl(174, 69%, 68%);
-    --p-04 : hsl(186, 59%, 89%);
+:root {
+    --p-01: hsl(198, 90%, 19%);
+    --p-02: hsl(190, 76%, 40%);
+    --p-03: hsl(174, 69%, 68%);
+    --p-04: hsl(186, 59%, 89%);
 
-    --p-white-01 : hsl(0, 78%, 96%);
-    --p-white-02 : hsl(0, 78%, 96%);
-    --p-white-03 : hsl(0, 78%, 96%);
-    --p-white-04 : hsl(0, 78%, 96%);
+    --p-white-01: hsl(0, 78%, 96%);
+    --p-white-02: hsl(0, 78%, 96%);
+    --p-white-03: hsl(0, 78%, 96%);
+    --p-white-04: hsl(0, 78%, 96%);
 
-    --p-black-01 : hsl(247, 12%, 15%);
-    --p-black-02 : hsl(251, 13%, 24%);
-    --p-black-03 : hsl(273, 12%, 31%);
-    --p-black-04 : hsl(296, 8%, 40%);
+    --p-black-01: hsl(247, 12%, 15%);
+    --p-black-02: hsl(251, 13%, 24%);
+    --p-black-03: hsl(273, 12%, 31%);
+    --p-black-04: hsl(296, 8%, 40%);
 }
 
 @font-face {
@@ -21,8 +21,8 @@
 }
 
 
-
-html, body{
+html,
+body {
     margin: 0;
     padding: 0;
 
@@ -35,40 +35,63 @@ html, body{
     background-color: var(--p-04);
 }
 
-main{
+footer {
+    position: sticky;
+    bottom: 0;
+}
+
+header,
+footer {
+    display: flex;
+
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 1em;
+
+    background-color: aqua;
+}
+
+.fillup {
+    width: 100vw;
+
     height: max-content;
 }
 
-.hidden{
+main {
+    height: max-content;
+}
+
+.hidden {
     display: none;
 }
 
-.warning{
-    color:red;
+.warning {
+    color: red;
 }
 
-.box{
+.box {
     flex-direction: column;
     justify-content: center;
-    
+
     width: fit-content;
     height: fit-content;
 
     border-radius: .5em;
     padding: 1em;
     margin: 1em;
-    
+
     border: 1px solid black;
 
     background-color: var(--p-white-01);
 }
 
-.add_contact{
+.add_contact {
     -webkit-mask-image: url(../img/plus_icon.webp);
     mask-image: url(../img/plus_icon.webp);
 
     -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat; 
+    mask-repeat: no-repeat;
 
     mask-size: contain;
 
@@ -80,49 +103,58 @@ main{
     border: 0;
 }
 
-.add_contact:hover{
+.add_contact:hover {
     background-color: var(--p-black-03);
 }
 
-.contacts{
+.contacts {
     display: flex;
     flex-wrap: wrap;
 
     margin: 1em;
 }
 
-div.formulary{
+div.formulary {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.mono{
-    font:1em "mono";
+.mono {
+    font: 1em "mono";
 }
 
-label,input,p{
+label,
+input,
+p {
     margin: 1em;
 }
 
-input[type="text"], input[type="tel"], input[type="email"]{
+input[type="text"],
+input[type="tel"],
+input[type="email"] {
     max-width: 16em;
 }
 
-.center_abs{
+.center_abs {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.center_flex{
+.center_flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.no_deco, .no_deco:hover{
+.flex_column {
+    flex-direction: column;
+}
+
+.no_deco,
+.no_deco:hover {
     text-decoration: none;
     color: var(--p-black-01);
 }
