--- a/_css/style.css
+++ b/_css/style.css
@@ -20,14 +20,16 @@
     src: url(../fonts/Ubuntu-C.ttf);
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
 html,
 body {
     margin: 0;
     padding: 0;
-
-    width: 100%;
-    height: 100%;
 
     height: 100vh;
     width: 100vw;
@@ -50,12 +52,6 @@ footer {
     padding: 1em;
 
     background-color: aqua;
-}
-
-.fillup {
-    width: 100vw;
-
-    height: max-content;
 }
 
 main {
