Re-referenced some images and further standardized the /contatos/ site 	modified:   _css/style.css 	modified:   contatos/index.php

--- a/_css/style.css
+++ b/_css/style.css
@@ -81,8 +81,8 @@ main {
 }
 
 .add_contact {
-    -webkit-mask-image: url(../img/plus_icon.webp);
-    mask-image: url(../img/plus_icon.webp);
+    -webkit-mask-image: url(../_img/plus_icon.webp);
+    mask-image: url(../_img/plus_icon.webp);
 
     -webkit-mask-repeat: no-repeat;
     mask-repeat: no-repeat;
