--- a/_css/style.css
+++ b/_css/style.css
@@ -64,10 +64,10 @@ p {
     margin: 1em;
 }
 
-p,
-h1,
 input[type="button"],
 input[type="submit"],
+p,
+h1,
 a {
     color: var(--p-black-01);
 }
@@ -89,9 +89,8 @@ select,
 button {
     background-color: var(--p-white-02);
 
-    border-radius: .5em;
-
     border: 1px solid var(--p-black-04);
+    border-radius: .5em;
 }
 
 input[type="button"]:hover,
@@ -100,10 +99,7 @@ input[type="submit"]:hover,
 select:hover,
 button:hover {
     background-color: var(--p-white-03);
-
-    border-radius: .5em;
-
-    border: 1px solid var(--p-black-03);
+    border-color: var(--p-black-03);
 }
 
 .hidden {
@@ -130,7 +126,7 @@ button:hover {
     background-color: var(--p-white-01);
 }
 
-.add_contact {
+#add_contact {
     -webkit-mask-image: url(../_img/plus_icon.webp);
     mask-image: url(../_img/plus_icon.webp);
 
@@ -147,7 +143,7 @@ button:hover {
     border: 0;
 }
 
-.add_contact:hover {
+#add_contact:hover {
     background-color: var(--p-black-03);
 }
 
