--- a/_css/style.css
+++ b/_css/style.css
@@ -147,7 +147,7 @@ button:hover {
     background-color: var(--p-black-03);
 }
 
-.contacts {
+#contact_list {
     display: flex;
     flex-wrap: wrap;
 
