--- a/_css/style.css
+++ b/_css/style.css
@@ -6,7 +6,7 @@
 
     --p-white-01: hsl(0, 0%, 96%);
     --p-white-02: hsl(0, 0%, 92%);
-    --p-white-03: hsl(0, 0%, 68%);
+    --p-white-03: hsl(0, 0%, 88%);
     --p-white-04: hsl(0, 0%, 51%);
 
     --p-black-01: hsl(247, 12%, 15%);
@@ -77,7 +77,8 @@ a {
 
 input[type="text"],
 input[type="tel"],
-input[type="email"] {
+input[type="email"]
+input[type="password"] {
     max-width: 16em;
 }
 
@@ -88,6 +89,7 @@ input[type="text"],
 input[type="tel"],
 input[type="email"],
 input[type="number"],
+input[type="password"],
 select,
 button {
     background-color: var(--p-white-02);
@@ -99,6 +101,11 @@ button {
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover,
+input[type="text"]:hover,
+input[type="tel"]:hover,
+input[type="email"]:hover,
+input[type="number"]:hover,
+input[type="password"]:hover,
 select:hover,
 button:hover {
     background-color: var(--p-white-03);
