--- a/_css/style.css
+++ b/_css/style.css
@@ -154,13 +154,15 @@ button:hover {
 }
 
 .flex_column {
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
 .flex_row {
     display: flex;
     flex-direction: row;
-    
+
     align-items: center;
     justify-content: space-between;
 }
