Made so code.php saves fully formated HTML 	modified:   .gitignore 	modified:   _css/style.css 	modified:   _data/cores.dat 	modified:   cores/code.php 	modified:   cores/read.php

--- a/_css/style.css
+++ b/_css/style.css
@@ -124,7 +124,8 @@ button:hover {
     flex-direction: column;
     justify-content: center;
 
-    width: fit-content;
+    max-width: 36em;
+
     height: fit-content;
 
     border-radius: .5em;
