Minor changes     *Centralized the "add contact" button     *Changed a No to a N°     *Reduced the name input box on the contactlist to 16 chars maximum     *made some php echo fancier stuff 	modified:   _css/style.css 	modified:   contatos/contact_reader.php 	modified:   contatos/index.php 	modified:   cores/code.php 	modified:   cores/read.php

--- a/_css/style.css
+++ b/_css/style.css
@@ -175,6 +175,7 @@ button:hover {
 .flex_grid {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 
     margin: 1em;
 }
@@ -193,8 +194,8 @@ button:hover {
 
     mask-size: contain;
 
-    width: 5em;
-    height: 5em;
+    width: 2em;
+    height: 2em;
 
     background-color: var(--p-white-01);
     border: 0;
