--- a/_css/style.css
+++ b/_css/style.css
@@ -32,7 +32,7 @@ body {
     padding: 0;
 
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 
     display: flex;
     flex-direction: column;
@@ -44,6 +44,10 @@ body {
 footer {
     position: sticky;
     bottom: 0;
+}
+
+header{
+    color: var(--p-white-04);
 }
 
 header,
@@ -71,21 +75,11 @@ a {
     margin: 1em;
 }
 
-input[type="text"],
-input[type="tel"],
-input[type="email"]
-input[type="password"] {
+input{
     max-width: 16em;
 }
 
-input[type="button"],
-input[type="reset"],
-input[type="submit"],
-input[type="text"],
-input[type="tel"],
-input[type="email"],
-input[type="number"],
-input[type="password"],
+input,
 select,
 button {
     background-color: var(--p-white-02);
@@ -94,14 +88,7 @@ button {
     border-radius: .5em;
 }
 
-input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover,
-input[type="text"]:hover,
-input[type="tel"]:hover,
-input[type="email"]:hover,
-input[type="number"]:hover,
-input[type="password"]:hover,
+input,
 select:hover,
 button:hover {
     background-color: var(--p-white-03);
@@ -203,4 +190,8 @@ button:hover {
 
 #add_contact:hover {
     background-color: var(--p-black-03);
+}
+
+#out {
+    font-size: 2em;
 }
